<resources>
    <string name="app_name">FirebaseChat</string>
    <string name="new_account">New Account</string>
    <string name="welcome_to_firebase_chat">Welcome to Firebase Chat</string>
    <string name="password">Password</string>
    <string name="email">Email</string>
    <string name="create_account">CREATE ACCOUNT</string>
    <string name="name">Name</string>
    <string name="log_out">Log Out</string>
    <string name="account_settings">Account Settings</string>
    <string name="all_users">All Users</string>
    <string name="create_new_account">Create New Account</string>
    <string name="already_have_account">ALREADY HAVE ACCOUNT</string>
    <string name="login_to_your_account">Login to your account</string>
    <string name="login">Login</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="default_status">Hi there, I am using Firebase Chat App</string>
    <string name="user_name">Display Name</string>
    <string name="settings_change_image">CHANGE IMAGE</string>
    <string name="settings_change_status">CHANGE STATUS</string>
    <string name="update_status">New Status</string>
    <string name="update">Update</string>

    <!-- TODO: ROCK PAPER SCISSORS GAME HERE -->
    <string name="error_missing_permissions">Cannot start without required permissions</string>

    <string name="codename">Your codename: %s</string>
    <string name="opponent_name">Opponent: %s</string>
    <string name="no_opponent">none (yet)</string>

    <string name="status_disconnected">Disconnected</string>
    <string name="status_searching">Searching</string>
    <string name="status_connected">Connected</string>

    <string name="game_choice">You chose %s</string>

    <string name="win_message">%1$s beats %2$s!</string>
    <string name="tie_message">You both chose %s</string>
    <string name="loss_message">%1$s loses to %2$s…</string>

    <string name="action_find_opponents">Find opponent</string>
    <string name="action_disconnect">Disconnect</string>

    <string name="choice_rock">Rock</string>
    <string name="choice_paper">Paper</string>
    <string name="choice_scissors">Scissors</string>

    <string name="game_score">%1$d : %2$d</string>

</resources>
